# npminstall

./: .autod.conf.js  .eslintignore  .eslintrc  .gitignore  .mocharc-integration.yml  .mocharc-normal-integration.yml  .mocharc-rapid-integration.yml  .mocharc.yml  .snyk  .travis.yml  AUTHORS  CHANGELOG.md  Cargo.toml  History.md  LICENSE  LICENSE.txt  README.md  appveyor.yml  lerna.json  package.json
benchmark/: Makefile  README.md
docs/: DEV.md
integration/: README.md  package.json
lib/: alias.js  bin.js  cnpm_config.js  config.js  context.js  dependencies.js  download.js  format_install_options.js  get.js  global_install.js  index.js  install.js  install_package.js  lifecycle_scripts.js  link.js  local_install.js  lockfile_resolver.js  nested.js  npa.js  npa_types.js  patch_buffer.js  postinstall.js  postuninstall.js  prebuild_mirror_config_china.json  preinstall.js  prepare.js  prepublish.js  preuninstall.js  resolution.js  uninstall.js  utils.js
node-gyp-bin/: node-gyp.cmd  node-gyp.js
src/: lib.rs
test/: alias.test.js  all.js  bigPackage.test.js  bin.test.js  bundleDependencies.test.js  cleanup.test.js  concurrency-install.test.js  context.test.js  css-loader.test.js  custom-registry.test.js  dependencies-tree.test.js  dependencies.test.js  disable-dedupe.test.js  download.mockArchScript.js  download.mockScript.js  download.test.js  engine-strict.test.js  eslint-plugin-html.test.js  fix-bug-versions.test.js  flatten-types.test.js  flatten.test.js  flow-bin.test.js  fmode.test.js  forceSymlink.test.js  get-initial.test.js  get.test.js  git-clone-install.sh  (+83 more)
(+199 files in other folders)
