[package]
name = "npminstall-rs"
version = "0.1.0"
authors = ["The npminstall Developers"]
edition = "2018"

[profile.release]
panic = "abort"
opt-level = 3  # Optimize for size.
lto = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[workspace]
members = [
    "packages/utils",
    "packages/rafs",
    "packages/bootstrap",
    "packages/bootstrap-bin",
    "packages/downloader",
    "packages/binding",
    "packages/tokio-tar"
]
